Oppdaterer versjoner og openapi-definisjon
