# app/main/api/fellesordningen/VedtakResponse.kt
@@ -2,6 +2,6 @@ package api.fellesordningen
 
 import java.time.LocalDate
 
-data class VedtakResponse(val personId: String, val perioder: List<VedtakPeriode>)
+data class VedtakResponse(val perioder: List<VedtakPeriode>)
 
-data class VedtakPeriode(val fraDato:LocalDate, val tilDato:LocalDate?)
+data class VedtakPeriode(val fraOgMedDato:LocalDate, val tilOgMedDato:LocalDate?)
